update checkbox selection - using grid:

--- a/website/app/index.html
+++ b/website/app/index.html
@@ -17,8 +17,6 @@
 
     <!-- build:css assets/css/style.css -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
-    <!--<link href="assets/css/bootstrap-modal-bs3patch.css" rel="stylesheet">-->
-    <!--<link href="assets/css/bootstrap-modal.css" rel="stylesheet">-->
     <link href="assets/css/awesome-bootstrap-checkbox.css" rel="stylesheet">
     <link href="assets/css/select2/select2.css" rel="stylesheet">
     <link href="assets/css/select2/select2-bootstrap.css" rel="stylesheet">
@@ -133,8 +131,6 @@
 <script src="assets/js/angular/hotkeys.min.js"></script>
 <script src="assets/js/angular/ng-context-menu.min.js"></script>
 <script src="assets/js/bootstrap.min.js"></script>
-<!--<script src="assets/js/bootstrap-modalmanager.js"></script>-->
-<!--<script src="assets/js/bootstrap-modal.js"></script>-->
 <script src="assets/js/underscore-min.js"></script>
 <script src="assets/js/underscore.string.min.js"></script>
 <script src="assets/js/angular/socket.js"></script>
@@ -236,6 +232,7 @@
 <script src="application/core/projects/project/reviews/reviews-controller.js"></script>
 <script src="application/core/projects/project/reviews/review-create-controller.js"></script>
 <script src="application/core/projects/project/reviews/review-edit-controller.js"></script>
+<script src="application/core/projects/project/reviews/modal-instance-directive.js"></script>
 <script src="application/core/projects/project/notes/notes-controller.js"></script>
 <script src="application/core/projects/project/notes/create-note.js"></script>
 <script src="application/core/projects/project/sideboard/sideboard-controller.js"></script>
