--- a/website/app/application/core/projects/project/home/directives/display-process.html
+++ b/website/app/application/core/projects/project/home/directives/display-process.html
@@ -1,88 +1,46 @@
 <div>
-        <span ng-click="" style="cursor: pointer">
-            <span ng-show="process.process">
-                {{process.process.name | truncate:25:'...':true}}
-                <span class="label label-primary"
-                      style="background-color:#e26a6a;">Draft</span>
-            </span>
-            <span data-toggle="modal" data-target="#modal-2" ng-hide="process.process">
-                {{process.name | truncate:25:'...':true}}
-            </span>
-        </span>
-        <span class="pull-right">
-            <small class="text-muted">{{process.birthtime | toDateString}}</small>
-        </span>
+    <div class="modal-header">
+        <h3 class="modal-title">{{modal.process.name}}</h3>
+    </div>
+    <div class="modal-body">
+        <div class="row">
+            <div ng-repeat="each in ['inputs', 'outputs']">
+                 <b>{{each}}</b>
+                <ul>
+                    <li  ng-repeat="(key, values) in process[each]">
+                        <b>{{key}}</b>
 
-    <div id="modal-2" class="modal" style="overflow:auto" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-dialog modal-lg">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal"><span>×</span></button>
-                    <h4 class="modal-title">{{process.name}}</h4>
-                </div>
-                <div class="modal-body">
-                    <div class="row">
-                        <b>Inputs</b>
-                        <ul class="">
-                            <li class="" ng-repeat="(key, values) in process.inputs">
-                                    <b>{{key}}</b>
-                                <div ng-switch="" on="key">
-                                    <div ng-switch-when="files">
-                                        <ul style="padding-left: 30px;">
-                                            <li ng-repeat="item in values">
-                                                <a ui-sref="projects.project.files.view({'fileid': item.id})">
-                                                    {{item.other.name}}</a>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                    <div ng-switch-when="sample">
-                                        <ul style="padding-left: 30px;">
-                                            <li ng-repeat="item in values">
-                                                {{item.other.name}}
-                                            </li>
-                                        </ul>
-                                    </div>
-                                    <div ng-switch-default>
-                                        <ul style="padding-left: 30px;">
-                                            <li ng-repeat="item in values">
-                                                {{item.display_name}} : {{item.value}} {{item.unit}}
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="row">
-                        <b>Outputs</b>
-                        <ul class="">
-                            <li class="" ng-repeat="(key, values) in process.outputs">
-                                    <b>{{key}}</b>
-                                <div ng-switch="" on="key">
-                                    <div ng-switch-when="files">
-                                        <ul style="padding-left: 30px;">
-                                            <li ng-repeat="item in values">
-                                                <a ui-sref="projects.project.files.view({'fileid': item.id})">
-                                                    {{item.other.name}}</a>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                    <div ng-switch-default>
-                                        <ul style="padding-left: 30px;">
-                                            <li ng-repeat="item in values">
-                                                {{item.display_name}} : {{item.value}} {{item.unit}}
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="modal-footer" id="woModalFoot">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                </div>
+                        <div ng-switch="" on="key">
+                            <div ng-switch-when="files">
+                                <ul style="padding-left: 30px;">
+                                    <li ng-repeat="item in values">
+                                        <a ui-sref="projects.project.files.view({'fileid': item.id})">
+                                            {{item.other.name}}</a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div ng-switch-when="sample">
+                                <ul style="padding-left: 30px;">
+                                    <li ng-repeat="item in values">
+                                        {{item.other.name}}
+                                    </li>
+                                </ul>
+                            </div>
+                            <div ng-switch-default>
+                                <ul style="padding-left: 30px;">
+                                    <li ng-repeat="item in values">
+                                        {{item.display_name}} : {{item.value}} {{item.unit}}
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
             </div>
         </div>
+    </div>
+    <div class="modal-footer">
+        <button class="btn btn-primary" ng-click="ok()">OK</button>
+        <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
     </div>
 </div>
