--- a/website/app/application/core/projects/project/modal/process-modal.html
+++ b/website/app/application/core/projects/project/modal/process-modal.html
@@ -7,17 +7,13 @@
         </div>
         <div class="panel-body"
              ng-class="{'no-max-height': isExpanded()}">
-            <ul class="list-unstyled">
-                <li class="dashboard-item"
-                    ng-class="{'open-item-details': process.showDetails}"
-                    ng-repeat="process in bk.all | filter:search | event:project.date:project.nextdate as procs">
-                    <display-process process="process">
-                    </display-process>
-                </li>
-                <li ng-show="procs.length === 0" class="dashboard-item">
-                    <div> No processes.</div>
-                </li>
-            </ul>
+            <div ng-if="project.processes.length!== 0" style="width: 100%;height:100%"
+                 angular-grid="gridOptions"
+                 class="ag-fresh ag-basic">
+            </div>
+            <div ng-if="project.processes.length === 0">
+                <p style="padding-left: 20px;">No Processes.</p>
+            </div>
         </div>
     </div>
 </div>
