--- a/website/app/application/core/projects/project/reviews/create.html
+++ b/website/app/application/core/projects/project/reviews/create.html
@@ -30,12 +30,10 @@
         <div class="col-xs-12 headings">Attachment</div>
         <div class="row" style="padding: 15px;">
             <br>
-            <button data-toggle="modal" data-target="#modal-1"
-            style="border: 3px dotted #d3d3d3;border-radius: 3px;color: #d3d3d3 " class="btn btn-default"><i
+            <button ng-click="open('lg')" style="border: 3px dotted #d3d3d3;border-radius: 3px;color: #d3d3d3 " class="btn btn-default"><i
             class="fa fa-fw fa-plus"></i> ADD
             </button>
             <br><br>
-
             <div class="row" ng-repeat="attachment in model.attachments">
                 <div class="col-xs-5">
                     <i class="fa fa-fw fa-paperclip fa-lg" style="color: #919191"></i>
@@ -56,7 +54,6 @@
     </div>
     <div class="row">
         <br>
-
         <div class="col-xs-3">
             <button class="btn btn-danger">Cancel</button>
         </div>
@@ -64,48 +61,4 @@
             <button class=" btn btn-default btn-review  btn-details-container">Send</button>
         </div>
     </div>
-<!-- Button trigger modal -->
-
-<div id="modal-1" class="modal  fade" tabindex="-1" role="dialog" aria-labelledby="modalOneLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal"><span>×</span></button>
-                <h4 class="modal-title" id="modalOneLabel">Attachments</h4>
-            </div>
-            <div class="modal-body">
-                <div class="row">
-                    <!-- Nav tabs -->
-                    <ul class="nav nav-tabs" role="tablist" id="myTab">
-                        <li class="active"><a data-target="#1" data-toggle="tab">Files</a></li>
-                        <li><a data-target="#2" data-toggle="tab">Samples</a></li>
-                        <li><a data-target="#3" data-toggle="tab">Processes</a></li>
-                    </ul>
-                    <!-- Tab panes -->
-                    <div class="tab-content">
-                        <div class="tab-pane active" id="1">
-                            <div style="padding: 10px;">
-                                <div modal-files project="project"></div>
-                            </div>
-                        </div>
-                        <div class="tab-pane" id="2">
-                            <div style="padding: 10px;">
-                                <div home-samples project="project"></div>
-                            </div>
-                        </div>
-                        <div class="tab-pane" id="3">
-                            <div style="padding: 10px;">
-                                <div modal-processes project="project"></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
-            </div>
-        </div>
-    </div>
-</div>
 </div>
