updates to the angular ui modal and checkbox thru aGrid

--- a/website/app/application/core/projects/project/reviews/create.html
+++ b/website/app/application/core/projects/project/reviews/create.html
@@ -38,6 +38,7 @@
                 <div class="col-xs-5">
                     <i class="fa fa-fw fa-paperclip fa-lg" style="color: #919191"></i>
                     <a class="link pointer">{{attachment.name}}</a>
+                    <i ng-click="removeAttachment(attachment)" class="fa fa-fw fa-close pull-right"></i>
                 </div>
             </div>
         </div>
