--- a/website/app/index.html
+++ b/website/app/index.html
@@ -238,6 +238,7 @@
 <script src="application/core/projects/project/sideboard/sideboard-controller.js"></script>
 <script src="application/core/projects/project/modal/files-modal-controller.js"></script>
 <script src="application/core/projects/project/modal/process-modal-controller.js"></script>
+<script src="application/core/projects/project/modal/samples-modal-controller.js"></script>
 
 <script src="application/core/projects/project/tab-control-bar.js"></script>
 <script src="application/core/projects/project/project-description-directive.js"></script>
