--- a/website/app/application/core/projects/project/reviews/myModalContent.html
+++ b/website/app/application/core/projects/project/reviews/myModalContent.html
@@ -19,7 +19,7 @@
                 </div>
                 <div class="tab-pane" id="2">
                     <div style="padding: 10px;">
-                        <div home-samples project="project"></div>
+                        <div modal-samples project="project"></div>
                     </div>
                 </div>
                 <div class="tab-pane" id="3">
