--- a/website/app/application/directives/mc-tree-header.html
+++ b/website/app/application/directives/mc-tree-header.html
@@ -3,7 +3,7 @@
         <span ng-click="item.showDetails = !item.showDetails"
               style="cursor: pointer;">
             <b style="color: #D2C4D5"><i class="fa fa-fw"
-                  ng-class="{'fa-folder ': item.type === 'datadir' && !item.showDetails, 'fa-folder-open': item.type === 'datadir' && item.showDetails}"></i>
+                                         ng-class="{'fa-folder ': item.type === 'datadir' && !item.showDetails, 'fa-folder-open': item.type === 'datadir' && item.showDetails}"></i>
             </b>
             <i style="color: #BFBFBF" ng-class="{'fa fa-fw fa-file': item.type === 'datafile'}"></i>
             <span ng-if="item.type !== 'datafile'" data-toggle="tooltip" data-placement="top" title="{{item.fullname}}"
@@ -14,15 +14,16 @@
                   ui-draggable="true" drag="item">{{::item.displayname}}
 
             </span>
+            <span class="pull-right"><input ng-click="addItem()" ng-checked="item.selected" type="checkbox"></span>
         </span>
-        <span  ng-show="show" class="pull-right">
-                <a   title="New Folder" ng-click="item.addFolder = !item.addFolder">
+        <span ng-show="show" class="pull-right">
+                <a title="New Folder" ng-click="item.addFolder = !item.addFolder">
                     <i ng-if="item.type === 'datadir'"
                        class="fa fa-fw fa-plus"></i>
                 </a>
-                </a>
-                <mc-flow-button dir="item" ng-if="item.type === 'datadir'"></mc-flow-button>
+            <mc-flow-button dir="item" ng-if="item.type === 'datadir'"></mc-flow-button>
         </span>
+
         <div class="row" ng-if="item.addFolder">
             <input type="text"
                    placeholder="Folder Name..."
