--- a/website/app/application/core/projects/project/reviews/edit.html
+++ b/website/app/application/core/projects/project/reviews/edit.html
@@ -1,4 +1,8 @@
 <div class="details-main-content">
+    <div class="row">
+        <i ng-class="{'fa-minus-circle review-closed': review.status === 'closed',
+       'fa-circle review-open': review.status === 'open'}" class="fa fa-fw"></i>{{review.status}}
+    </div>
     <div class="row" style="padding: 10px;color: #C0C0C0">
         {{(review.messages[(review.messages.length -1)].date)}}
     </div>
@@ -6,7 +10,6 @@
         <div class="col-xs-5">
             <div class="headings">Requested By</div>
             <div style="padding-left: 10px; ">
-
                         <span class="fa-stack fa-lg">
                             <i style="color: #C0C0C0" class="fa fa-circle fa-stack-2x"></i>
                             <i style="color: white;" class="fa fa-user fa-stack-1x"></i>
@@ -21,14 +24,23 @@
                             <i style="color: #C0C0C0" class="fa fa-circle fa-stack-2x"></i>
                             <i style="color: white;" class="fa fa-user fa-stack-1x"></i>
                         </span>
-            <span class="who">{{review.assigned_to}}</span>
+            <span class="who"> {{review.assigned_to[0]}} and <a ng-click="others = !others">
+                {{review.assigned_to.length-1}} others </a></span>
+
+            <div style="padding-left: 40px;" class="row" ng-if="others">
+                <ul class="list-inline">
+                    <li ng-repeat="each_person in review.assigned_to" ng-show="!$first" class="who">
+                        {{each_person}}{{$last ? '' : ',&nbsp;'}}
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
     <hr class="divider"/>
 
     <div class="row">
         <div class="col-xs-6">
-            <div class="headings">Attachment</div>
+            <div class="headings">Attachments</div>
 
             <div class="row" ng-repeat="attachment in review.attachments">
                 <div style="padding-left: 10px;line-height: 35px;">
@@ -55,14 +67,14 @@
                         <small style="padding-left: 15px;" class="text-muted">{{message.date}}</small>
                     </li>
                 </ul>
-                <div class="row">
+                <div ng-if="review.status === 'open'" class="row">
                     <div class="col-xs-7">
                             <textarea placeholder="Add a comment..." class="form-control"
                                       ng-model="model.comment"></textarea>
                     </div>
                     <div class="col-xs-3">
                         <button ng-click="addComment()"
-                                class="btn btn-success btn-review btn-details-container">Comment
+                                class="btn-review  btn-details-container btn btn-default">Comment
                         </button>
                     </div>
                 </div>
@@ -71,8 +83,9 @@
     </div>
 
     <div class="row">
-        <div style="padding: 25px;">
-            <i class="fa fa-fw fa-archive fa-lg close-link"></i> <a class="close-link">CLOSE AND ARCHIVE</a>
+        <div ng-if="review.status === 'open'" style="padding: 25px;">
+            <i class="fa fa-fw fa-archive fa-lg close-link"></i> <a ng-click="archiveReview()" class="close-link">CLOSE
+            AND ARCHIVE</a>
         </div>
     </div>
 </div>
