--- a/website/app/application/core/projects/project/home/directives/home-files.html
+++ b/website/app/application/core/projects/project/home/directives/home-files.html
@@ -9,7 +9,7 @@
             </a>
         </div>
         <div class="panel-body home-panel-body no-max-height">
-            <div style="padding: 20px;width: 100%; height: 400px;"
+            <div style="padding: 20px;width: 100%; height: 100%;"
                  angular-grid="gridOptions"
                  class="ag-file-browser">
             </div>
