--- a/website/app/application/core/projects/project/reviews/edit.html
+++ b/website/app/application/core/projects/project/reviews/edit.html
@@ -51,8 +51,8 @@
                     <i class="fa fa-fw fa-paperclip fa-lg" style="color: #919191"></i>
                     <img ng-if="attachment.type === 'sample'" src="assets/img/splash/sample_icon.png" style="height: 40px;padding-bottom: 10px;">
                     <img ng-if="attachment.type === 'process'" src="assets/img/splash/process-icon.png" style="height: 40px;padding-bottom: 10px;">
-                    <img ng-if="attachment.type === 'file'" src="assets/img/splash/file_icon.png" style="height: 40px;padding-bottom: 10px;">
-                    <a class="link" style="padding-left: 15px;">{{attachment.name}}</a>
+                    <img ng-if="attachment.type === 'datafile'" src="assets/img/splash/file_icon.png" style="height: 40px;padding-bottom: 10px;">
+                    <a class="link" style="padding-left: 15px;" ng-click="openDetails(attachment)">{{attachment.name}}</a>
                 </div>
             </div>
         </div>
