--- a/website/app/application/core/projects/project/reviews/reviews.html
+++ b/website/app/application/core/projects/project/reviews/reviews.html
@@ -4,9 +4,12 @@
             <nav class="navbar navbar-default">
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li ng-class="{active: type === 'all'}"><a ng-click="listReviewsByType('all')">all</a>
+                        <li ng-class="{active: type === 'my_reviews'}"><a ng-click="listReviewsByType('my_reviews')">My Reviews</a>
                         </li>
                         <li ng-class="{active: type === 'due'}"><a ng-click="listReviewsByType('due')">Due</a></li>
+
+                        <li ng-class="{active: type === 'all'}"><a ng-click="listReviewsByType('all')">all</a>
+                        </li>
                         <li ng-class="{active: type === 'closed'}"><a
                                 ng-click="listReviewsByType('closed')">Archived</a></li>
                     </ul>
