update to the attachment spacing

--- a/website/app/application/core/projects/project/reviews/edit.html
+++ b/website/app/application/core/projects/project/reviews/edit.html
@@ -47,7 +47,7 @@
             <div class="headings">Attachments</div>
 
             <div class="row" ng-repeat="attachment in review.attachments">
-                <div style="padding-left: 10px;line-height: 35px;">
+                <div style="padding-left: 10px;padding-bottom: 20px;;line-height: 5px;">
                     <i class="fa fa-fw fa-paperclip fa-lg" style="color: #919191"></i>
                     <img ng-if="attachment.type === 'sample'" src="assets/img/splash/sample_icon.png" style="height: 40px;padding-bottom: 10px;">
                     <img ng-if="attachment.type === 'process'" src="assets/img/splash/process-icon.png" style="height: 40px;padding-bottom: 10px;">
