updates to the reviews page

--- a/website/app/application/core/projects/project/reviews/create.html
+++ b/website/app/application/core/projects/project/reviews/create.html
@@ -62,9 +62,8 @@
     </div>
     <div class="row">
         <br>
-
         <div class="col-xs-3">
-            <button class="btn-details-container btn btn-default btn btn-cancel">Cancel</button>
+            <button ng-click="cancel()" class="btn-details-container btn btn-default btn btn-cancel">Cancel</button>
         </div>
         <div class="col-xs-3">
             <button ng-click="createReview()" class=" btn btn-default btn-review  btn-details-container">Send</button>
