--- a/website/app/index.html
+++ b/website/app/index.html
@@ -37,7 +37,7 @@
 
     <!-- Application style sheet -->
     <link href='http://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900,100,100italic,300italic,400italic,500italic,700italic,900italic' rel='stylesheet' type='text/css'>
-    <link href="style-3.css" rel="stylesheet">
+    <link href="assets/css/style-3.css" rel="stylesheet">
     <!-- endbuild -->
 </head>
 <body>
